--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-playwright
+playwrightcertifi==2024.2.2
+charset-normalizer==3.3.2
+greenlet==3.0.3
+idna==3.6
+playwright==1.42.0
+pyee==11.0.1
+requests==2.31.0
+typing_extensions==4.10.0
+urllib3==2.2.1
