--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,24 @@
-playwrightcertifi==2024.2.2
+anyio==4.3.0
+beautifulsoup4==4.12.3
+bs4==0.0.2
+certifi==2024.2.2
 charset-normalizer==3.3.2
+cssselect==1.2.0
 greenlet==3.0.3
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
 idna==3.6
+jmespath==1.0.1
+lxml==5.1.1
+packaging==24.0
+parsel==1.9.0
 playwright==1.42.0
 pyee==11.0.1
+python-dotenv==1.0.1
 requests==2.31.0
+sniffio==1.3.1
+soupsieve==2.5
 typing_extensions==4.10.0
 urllib3==2.2.1
+w3lib==2.1.2
